--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/particles.css">
+
 
   </head>
 
   <body id="page-top">
+    <div id="particles">
 
+    </div>
+    <script type="text/javascript">
+    function gen() {
+      var txt = "<div class = \"partic\"></div>";
+      for (var i = 0; i < 50; i++) {
+      txt  += "<div class = \"partic\"></div>";
+      }
+      document.getElementById("particles").innerHTML = txt
+    }
+    gen();
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Shorook Saleh</span>
@@ -73,14 +87,14 @@
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/shorook-saleh/">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="#">
               <i class="fab fa-github"></i>
             </a>
             <a href="#">
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram"></i>
             </a>
             <a href="#">
               <i class="fab fa-facebook-f"></i>
