--- a/demo.html
+++ b/demo.html
@@ -34,6 +34,44 @@
         position:absolute;
         top:0;
     }
+
+    .timelinecontainer {
+    	width:80%;
+    	margin:0 auto;
+    	overflow:auto;
+    	padding:2%;
+    }
+    .right-content, .left-content {
+    	float:left;
+    	display:block;
+    	width:40%;
+    	padding:1% 2%;
+    }
+    .left-content {
+    	border-right:5px dotted #666;
+    	text-align:right;
+    }
+    .left-content p {
+    	margin:150px 0 0;
+    }
+    .right-content p {
+    	margin:80px 0 150px;
+    }
+    .timelinecontainer p {
+    -webkit-transition: all 0.7s ease-in-out;
+    -moz-transition: all 0.7 ease-in-out;
+    -ms-transition: all 0.7s ease-in-out;
+    -o-transition: all 0.7s ease-in-out;
+    transition: all 0.7s ease-in-out;
+    }
+    .left-content .more-padding {
+      padding-right:100px;
+    }
+    .right-content .more-padding {
+      padding-left:100px;
+    }
+
+
     </style>
 
   </head>
@@ -215,9 +253,116 @@
               <div class="my-auto">
                 <div class="card p-3">
                   <div class="card-body">
-                    <h2 class="mb-5">Projects</h2>
+
+                    <h2 class="mb-3">Projects</h2>
+                    <h3 class="mb-2 text-primary">Fall 2016/2017</h3>
+                    <div class="row">
+                        <div class="col-sm-5">
+                          <div class="card m-3" style="width: 22rem;" >
+                           <div class="card-body" >
+                                <h4 class="card-title float">2D/3D Animation</h4>
+                                <h6 class="card-subtitle mb-2 text-muted">Created a short 3D animated movie using 3DS Max.</h6>
+
+                                <iframe  src="https://www.youtube.com/embed/3MCXv8Plmfs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                              </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-6">
+                        <div class="card m-3" style="width: 22rem;" >
+                         <div class="card-body" >
+                              <h4 class="card-title float">Intro. to Computer Graphics</h4>
+                              <h6 class="card-subtitle mb-2 text-muted">Programmed a program that calculates intersections between drawn polygons on the screen using OpenGL.</h6>
+                              <img class="card-img-top" src="img/logos/CGproject1.png" alt="Card image cap">
+
+                            </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card m-3 " style="width: 22rem;" >
+                       <div class="card-body" >
+                            <h4 class="card-title float"> Game Design and Development</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Created a platformer game using gamesalad.</h6>
+
+                            <div class="embed-responsive embed-responsive-4by3">
+                              <video class="embed-responsive-item" src="img/videos/ZombieInvasionDemo.mov"></video>
+                            </div>
+                          </div>
+                    </div>
+                  </div>
+                  </div>
+                  <h3 class="mb-2 text-primary">Spring 2016/2017</h3>
+                  <div class="row">
+                      <div class="col-sm-5">
+                        <div class="card m-3" style="width: 22rem;" >
+                         <div class="card-body" >
+                              <h4 class="card-title float">Special Topics in Comp. Science</h4>
+                              <h6 class="card-subtitle mb-2 text-muted">Used 3DSMax and After Effects to create a short animation using camera tracking.</h6>
+                              <iframe  src="https://www.youtube.com/embed/ZRoE2ALjrVE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card m-3" style="width: 22rem;" >
+                       <div class="card-body" >
+                            <h4 class="card-title float">Special Topics in IT</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Designed a character through on a concept development.</h6>
+                            <img class="card-img-top" src="img/logos/charcterSheet.jpg" alt="Card image cap">
+
+                          </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="card m-3 " style="width: 22rem;" >
+                     <div class="card-body" >
+                          <h4 class="card-title float"> 3D Design for Web</h4>
+                          <h6 class="card-subtitle mb-2 text-muted">Designed a first-person game using Unity as a final project for the course.</h6>
+
+                          <div class="embed-responsive embed-responsive-4by3">
+                            <video class="embed-responsive-item" src="img/videos/ZombieInvasionDemo.mov"></video>
+                          </div>
+                        </div>
+                  </div>
+                </div>
+                </div>
+                <h3 class="mb-2 text-primary">Fall 2017/2018</h3>
+                <div class="row">
+                    <div class="col-sm-5">
+                      <div class="card m-3" style="width: 22rem;" >
+                       <div class="card-body" >
+                            <h4 class="card-title float">Special Topics in Comp. Science</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Used 3DSMax and After Effects to create a short animation using camera tracking.</h6>
+
+                            <iframe  src="https://www.youtube.com/embed/3MCXv8Plmfs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="card m-3" style="width: 22rem;" >
+                     <div class="card-body" >
+                          <h4 class="card-title float">Special Topics in IT</h4>
+                          <h6 class="card-subtitle mb-2 text-muted">Designed a character through on a concept development.</h6>
+                          <img class="card-img-top" src="img/logos/CGproject1.png" alt="Card image cap">
+
+                        </div>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="card m-3 " style="width: 22rem;" >
+                   <div class="card-body" >
+                        <h4 class="card-title float"> 3D Design for Web</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Designed a first-person game using Unity as a final project for the course.</h6>
+
+                        <div class="embed-responsive embed-responsive-4by3">
+                          <video class="embed-responsive-item" src="img/videos/ZombieInvasionDemo.mov"></video>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              </div>
 
 
+
+                  </div>
                   </div>
                 </div>
             </section>
@@ -308,20 +453,17 @@
                       </div>
 
 
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Skills</div>
                     <ul class="fa-ul mb-0">
                       <li>
                         <i class="fa-li fa fa-check"></i>
-                        Mobile-First, Responsive Design</li>
+                        User Experience &amp; Service Designing</li>
                       <li>
                         <i class="fa-li fa fa-check"></i>
-                        Cross Browser Testing &amp; Debugging</li>
+                         Digital Drawing &amp; 2D/3D Animation (Modeling, Texturing and Rigging)</li>
                       <li>
                         <i class="fa-li fa fa-check"></i>
-                        Cross Functional Teams</li>
-                      <li>
-                        <i class="fa-li fa fa-check"></i>
-                        Agile Development &amp; Scrum</li>
+                        Project &amp; Team Managerial Skills </li>
                     </ul>
                   </div>
                 </div>
@@ -337,6 +479,23 @@
                       <h2 class="mb-5">Extracurricular</h2>
                       <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                       <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                      <div class="timelinecontainer">
+                           <div class="left-content">
+                              <p>Content 01</p>
+                              <p>Content 02</p>
+                              <p>Content 03</p>
+                              <p>Content 04</p>
+
+                           </div>
+                           <div class="right-content">
+                              <p>Content 01</p>
+                              <p>Content 02</p>
+                              <p>Content 03</p>
+                              <p>Content 04</p>
+
+                           </div>
+                        </div>
+
                     </div>
                   </div>
                 </div>
@@ -349,6 +508,22 @@
                 <div class="card p-3">
                   <div class="card-body">
                     <h2 class="mb-5">Awards &amp; Certifications</h2>
+                    <div class="timelinecontainer">
+                         <div class="left-content">
+                            <p>Content 01</p>
+                            <p>Content 02</p>
+                            <p>Content 03</p>
+                            <p>Content 04</p>
+
+                         </div>
+                         <div class="right-content">
+                            <p>Content 01</p>
+                            <p>Content 02</p>
+                            <p>Content 03</p>
+                            <p>Content 04</p>
+
+                         </div>
+                      </div>
                     <ul class="fa-ul mb-0">
                       <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
@@ -408,5 +583,22 @@
       document.getElementById("particles").innerHTML = txt
     }
     gen();
+    </script>
+    <script>
+          $(window).scroll(function(){
+      	$('.container p').each(function(){
+          	var scrollTop     = $(window).scrollTop(),
+              	elementOffset = $(this).offset().top,
+             		distance      = (elementOffset - scrollTop),
+      			    windowHeight  = $(window).height(),
+      			    breakPoint    = windowHeight*0.9;
+
+      			if(distance > breakPoint) {
+      				$(this).addClass("more-padding");
+      			}  if(distance < breakPoint) {
+      				$(this).removeClass("more-padding");
+      			}
+      	});
+      });
     </script>
 </html>
